--- a/css/style.css
+++ b/css/style.css
@@ -1,69 +1,67 @@
 @font-face {
-  font-family: 'MAZE RUNNER';
-  src: url("../font/MAZE_RUNNER.otf") format("opentype");
+	font-family: 'MAZE RUNNER';
+	src: url("../font/MAZE_RUNNER.otf") format("opentype");
 }
 *{
-	  font-family: 'MAZE RUNNER';
+	font-family: 'MAZE RUNNER';
 
 }
 body  {
 	font-family: 'MAZE RUNNER';
-  background-image: url("../images/ozadje.jpg");
- background-repeat: no-repeat;
-  background-size: 100%;
-  height: 100%;
-  display:grid;
-  place-items:center;
+	background-image: url("../images/ozadje.jpg");
+	background-repeat: no-repeat;
+	background-size: auto;
+	height: 100%;
+	display:grid;
+	place-items:center;
 	background-color:black;
 }
 
-button {
+h1{
+	font-size:60px;
+	color: black;
+	width:max-content;
+	margin-bottom:10%;	
+}
+
+.canvas{
+	height:max-content;
+	width:max-content;
+	padding:2%;
+	box-shadow: 5px 5px 5px 5px black;
+	backdrop-filter: blur(2px);
+}
+
+button{
     background-color: black;
     color: white;
     padding:10px 20px 10px 020px;
 	transition:0.5s;
 	cursor:pointer;
-	
+	margin-top:100px;
 }
+
 button:hover {
     background-color: white;
     color: black;	
 }
-h1{
-	font-size:60px;
-	color: black;
-	width:max-content;
-	margin-bottom:10%;
-	
+
+#button1{
+	left: 2em;
+	position:absolute;
+	top:2em;
+	cursor:pointer;
+	background-color: black;
+	color: white;
 }
-.canvas{
-height:max-content;
-width:max-content;
-padding:2%;
-box-shadow: 5px 5px 5px 5px black;
-backdrop-filter: blur(2px);
-
-
-
-}
-canvas{
-
-}
-.button{
-		margin-top:100px;
+#button1:hover {
+    background-color: white;
+    color: black;	
+	transition:0.5s;
 }
 
 #button2{
-float:right;
+	float:right;
 }
-
-#button1{
-left: 2em;
-position:absolute;
-top:2em;
-cursor:pointer;
-}
-
-
 
 
