--- a/css/style.css
+++ b/css/style.css
@@ -1,67 +1,111 @@
 @font-face {
-	font-family: 'MAZE RUNNER';
-	src: url("../font/MAZE_RUNNER.otf") format("opentype");
+  font-family: 'MAZE RUNNER';
+  src: url("../font/MAZE_RUNNER.otf") format("opentype");
 }
 *{
-	font-family: 'MAZE RUNNER';
+	  font-family: 'MAZE RUNNER';
 
 }
 body  {
-	font-family: 'MAZE RUNNER';
-	background-image: url("../images/ozadje.jpg");
-	background-repeat: no-repeat;
-	background-size: auto;
-	height: 100%;
-	display:grid;
-	place-items:center;
-	background-color:black;
+		font-family: 'MAZE RUNNER';
+	  background-image: url("../images/ozadje.jpg");
+	 background-repeat: no-repeat;
+	  background-size: 100%;
+	  height: 100%;
+	  display:grid;
+	  place-items:center;
+		background-color:black;
 }
 
-h1{
-	font-size:60px;
-	color: black;
-	width:max-content;
-	margin-bottom:10%;	
-}
-
-.canvas{
-	height:max-content;
-	width:max-content;
-	padding:2%;
-	box-shadow: 5px 5px 5px 5px black;
-	backdrop-filter: blur(2px);
-}
-
-button{
+button {
     background-color: black;
     color: white;
     padding:10px 20px 10px 020px;
 	transition:0.5s;
 	cursor:pointer;
-	margin-top:100px;
+	
 }
-
 button:hover {
     background-color: white;
     color: black;	
 }
-
-#button1{
-	left: 2em;
-	position:absolute;
-	top:2em;
-	cursor:pointer;
-	background-color: black;
-	color: white;
+h1{
+	font-size:60px;
+	color: black;
+	width:max-content;
+	margin-bottom:10%;
+	
 }
-#button1:hover {
-    background-color: white;
-    color: black;	
-	transition:0.5s;
+.canvas{
+height:max-content;
+width:max-content;
+padding:2%;
+box-shadow: 5px 5px 5px 5px black;
+backdrop-filter: blur(2px);
+}
+
+.button{
+		margin-top:100px;
 }
 
 #button2{
-	float:right;
+float:right;
+}
+
+#button1{
+left: 2em;
+position:absolute;
+top:2em;
+cursor:pointer;
+
 }
 
 
+
+.toggle-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.toggle-button {
+ position: relative;
+ display: inline-block;
+ width: 100px;
+ height: 50px;
+ margin: 0;
+ vertical-align: top;
+ background: #ffffff;
+ border: 1px solid #bbc1e1;
+ border-radius: 30px;
+ outline: none;
+ cursor: pointer;
+ -webkit-appearance: none;
+ -moz-appearance: none;
+ appearance: none;
+ transition: 1s;
+}
+
+.toggle-button::after {
+  content: "";
+
+  display: inline-block;
+  position: absolute;
+  left: 3px;
+  top: 1.5px;
+
+  width: 45px;
+  height: 45px;
+  background-color: #72b177;
+  border-radius: 50%;
+transition: all 1s cubic-bezier(0.2, 0.85, 0.32, 1.2);
+  transform: translateX(0);
+}
+
+.toggle-button:checked::after {
+  transform: translateX(calc(100% + 3px));
+  background-color: #fff;  
+}
+.toggle-button:checked {
+  background-color: #72b177;
+}
