--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body  {
 		font-family: 'MAZE RUNNER';
 	  background-image: url("../images/ozadje.jpg");
 	 background-repeat: no-repeat;
-	  background-size: 100%;
+	  background-size: auto;
 	  height: 100%;
 	  display:grid;
 	  place-items:center;
@@ -71,32 +71,26 @@ cursor:pointer;
 .toggle-button {
  position: relative;
  display: inline-block;
- width: 100px;
- height: 50px;
+ width: 70px;
+ height: 35px;
  margin: 0;
  vertical-align: top;
  background: #ffffff;
- border: 1px solid #bbc1e1;
+ border: 1px solid #85c6b7;
  border-radius: 30px;
- outline: none;
  cursor: pointer;
- -webkit-appearance: none;
- -moz-appearance: none;
- appearance: none;
  transition: 1s;
 }
 
 .toggle-button::after {
   content: "";
-
   display: inline-block;
   position: absolute;
   left: 3px;
   top: 1.5px;
-
-  width: 45px;
-  height: 45px;
-  background-color: #72b177;
+  width: 30px;
+  height: 30px;
+  background-color: #85c6b7;
   border-radius: 50%;
 transition: all 1s cubic-bezier(0.2, 0.85, 0.32, 1.2);
   transform: translateX(0);
@@ -107,5 +101,5 @@ transition: all 1s cubic-bezier(0.2, 0.85, 0.32, 1.2);
   background-color: #fff;  
 }
 .toggle-button:checked {
-  background-color: #72b177;
+  background-color: #85c6b7;
 }
